<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_bg"
        android:fillViewport="true"
        tools:context=".DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/activity_bg">

            <FrameLayout
                android:id="@+id/fl_progress_holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.4"
                android:animateLayoutChanges="true"
                android:background="@color/txt_white"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    android:id="@+id/pv_country"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateDrawable="@drawable/loading_animated"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />
            </FrameLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cntry_dtl_cntent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dim_large">

                <ImageView
                    android:id="@+id/iv_cntry_dtl_flg"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_large"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{detailViewModel.selectedCountry.flagUrl}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cntry_dtl_wthr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_xlarge"
                    android:text="@string/btn_wthr_txt"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cv_data" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dim_small"
                    android:layout_marginTop="@dimen/dim_xlarge"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/crd_crnr_radius"
                    app:cardElevation="@dimen/dim_large"
                    app:cardUseCompatPadding="false"
                    app:layout_constraintTop_toBottomOf="@+id/iv_cntry_dtl_flg">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dim_medium">

                        <TextView
                            android:id="@+id/tv_cntry_dtl_nm"
                            style="@style/Title.Large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dim_large"
                            android:text="@{detailViewModel.selectedCountry.countryName}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="London" />

                        <TextView
                            android:id="@+id/tv_cntry_dtl_cptl_title"
                            style="@style/Title.H1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dim_small"

                            android:text="@string/cntry_dtl_capital"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_cntry_dtl_nm" />

                        <TextView
                            android:id="@+id/tv_cntry_dtl_cptl_txt"
                            style="@style/Title.H2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dim_medium"
                            android:layout_marginTop="@dimen/dim_small"
                            android:text="@{detailViewModel.selectedCountry.capital}"
                            app:layout_constraintBaseline_toBaselineOf="@id/tv_cntry_dtl_cptl_title"
                            app:layout_constraintStart_toEndOf="@+id/barrier"
                            app:layout_constraintTop_toBottomOf="@+id/tv_cntry_dtl_nm"
                            tools:text="london" />

                        <TextView
                            android:id="@+id/tv_cntry_dtl_rgn_title"
                            style="@style/Title.H1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dim_small"
                            android:text="@string/cntry_dtl_rgn"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_cntry_dtl_cptl_title" />

                        <TextView
                            android:id="@+id/tv_cntry_dtl_rgn_txt"
                            style="@style/Title.H2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dim_medium"
                            android:layout_marginTop="@dimen/dim_small"
                            android:text="@{detailViewModel.selectedCountry.region}"
                            app:layout_constraintBaseline_toBaselineOf="@id/tv_cntry_dtl_rgn_title"
                            app:layout_constraintStart_toEndOf="@+id/barrier"
                            app:layout_constraintTop_toBottomOf="@+id/tv_cntry_dtl_cptl_title"
                            tools:text="Asia" />

                        <TextView
                            android:id="@+id/tv_cntry_dtl_sb_rgn_title"
                            style="@style/Title.H1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dim_small"
                            android:text="@string/cntry_dtl_sb_region"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_cntry_dtl_rgn_title" />

                        <TextView
                            android:id="@+id/tv_cntry_dtl_sb_rgn_txt"
                            style="@style/Title.H2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dim_medium"
                            android:layout_marginTop="@dimen/dim_small"
                            android:text="@{detailViewModel.selectedCountry.subRegion}"
                            app:layout_constraintBaseline_toBaselineOf="@id/tv_cntry_dtl_sb_rgn_title"
                            app:layout_constraintStart_toEndOf="@+id/barrier"
                            app:layout_constraintTop_toBottomOf="@+id/tv_cntry_dtl_rgn_title"
                            tools:text="USA"

                            />

                        <TextView
                            android:id="@+id/tv_cntry_dtl_pltn_title"
                            style="@style/Title.H1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dim_small"
                            android:text="@string/cntry_dtl_pltn"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_cntry_dtl_sb_rgn_title" />

                        <TextView
                            android:id="@+id/tv_cntry_dtl_pltn_txt"
                            style="@style/Title.H2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dim_medium"
                            android:layout_marginTop="@dimen/dim_small"
                            android:text="@{detailViewModel.selectedCountry.population}"
                            app:layout_constraintBaseline_toBaselineOf="@id/tv_cntry_dtl_pltn_title"
                            app:layout_constraintStart_toEndOf="@+id/barrier"
                            app:layout_constraintTop_toBottomOf="@+id/tv_cntry_dtl_sb_rgn_title"
                            tools:text="6098777777" />

                        <androidx.constraintlayout.widget.Barrier
                            android:id="@+id/barrier"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:barrierDirection="right"
                            app:constraint_referenced_ids="tv_cntry_dtl_cptl_title,tv_cntry_dtl_rgn_title,tv_cntry_dtl_sb_rgn_title,tv_cntry_dtl_pltn_title" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/error_view"
                    style="@style/Title.H2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_txt_extra_large"
                    android:background="@color/colorAccent"
                    android:padding="@dimen/dim_small"
                    android:text="@string/cntry_dtl_error"
                    android:textColor="@color/txt_white"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <data>

        <variable
            name="detailViewModel"
            type="com.zohointerview.countrylist.ui.detail.DetailFragmentViewModel" />
    </data>
</layout>